--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="imgtop">
         <img
           class="whole"
-          src="assets/images/illustration-article.svg"
+          src="illustration-article.svg"
           alt=""
         />
       </div>
@@ -33,12 +33,12 @@
         content, and presentation.
       </p>
       <footer>
-        <img class="footimg" src="assets/images/Subject.png" alt="greg" />
+        <img class="footimg" src="Subject.png" alt="greg" />
         <span>Dimitris Vathis</span>
       </footer>
          <div class="attribution">
       Challenge by
-      <a href="assets/images/image-avatar.webp" target="_blank"
+      <a href="image-avatar.webp" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Dimitris Vathis</a>.
     </div>
