--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       Challenge by
       <a href="image-avatar.webp" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Dimitris Vathis</a>.
+      >. Coded by <a href="<a href="https://dimi516.github.io/social/" target="_blank">Dimitris Vathis</a>.
     </div>
     </div>
  
